--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>I am testing git</h1>
     <p>So let's begin</p>
     <p>I can push my file to github</p>
+    <p>Someone changed this</p>
 </body>
 </html>
