--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
     <p>So let's begin</p>
     <p>I can push my file to github</p>
     <p>Someone changed this</p>
+    <div>
+        <p>I am changing this file</p>
+    </div>
 </body>
 </html>
